<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_register_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_tittle"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/dark_gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/register_tittle_desc"/>

        <EditText
            android:id="@+id/et_register_email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:autofillHints="emailAddress"
            android:hint="@string/register_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_register_account"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:autofillHints="username"
            android:hint="@string/register_input_account"
            android:inputType="text"/>

        <EditText
            android:id="@+id/et_register_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:autofillHints="password"
            android:hint="@string/register_input_password"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/et_register_password_again"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:autofillHints="password"
            android:hint="@string/register_input_password_again"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/register_button"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_tip"/>

            <TextView
                android:id="@+id/tv_back_to_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_login"
                android:textColor="@color/material_blue"
                android:layout_marginStart="4dp"
                android:background="@drawable/button_background"
                android:gravity="center"/>
        </LinearLayout>

</LinearLayout>


</ScrollView>