<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_forgot_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_tittle"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/dark_gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/forgot_desc"/>

        <EditText
            android:id="@+id/et_forgot_email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:autofillHints="emailAddress"
            android:hint="@string/forgot_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_forgot_confirm"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:autofillHints="password"
            android:hint="@string/forgot_confirm"
            android:inputType="number"
            android:enabled="false"/>

        <EditText
            android:id="@+id/et_new_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:autofillHints="emailAddress"
            android:hint="@string/forgot_new_password"
            android:inputType="textPassword" />


        <EditText
            android:id="@+id/et_new_password_again"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:autofillHints="emailAddress"
            android:hint="@string/forgot_new_password_again"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_forgot_done"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/forgot_done"/>

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_back"
            android:clickable="true"
            android:textColor="@color/material_blue"
            android:layout_gravity="end"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_background"/>
    </LinearLayout>


</ScrollView>