<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/car_login"
            android:scaleType="centerCrop"
            android:contentDescription="@null"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/et_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/login_user"
            android:padding="10dp"
            android:layout_marginTop="50dp"
            android:autofillHints="username"
            android:inputType="text"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/login_password"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:autofillHints="password"
            android:inputType="textPassword"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_remember_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_remember"
                android:layout_gravity="start"/>

            <TextView
                android:id="@+id/tv_forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_forgot"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@color/material_blue"
                android:minHeight="48dp"
                android:gravity="center"
                android:background="@drawable/button_background"/>
        </LinearLayout>
        
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/login_button"/>
        
        <LinearLayout
            android:id="@+id/layout_divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#dadce0"/>
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/login_third_text"
                android:textColor="@color/secondary_text_gray"
                android:textSize="13sp"/>
            
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/divider_gray"/>
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="center">

            <!--
            <ImageButton
                android:id="@+id/btn_facebook"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_facebook"
                android:contentDescription="@string/login_facebook"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"/>
            -->

            <ImageButton
                android:id="@+id/btn_google"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_google"
                android:contentDescription="@string/login_facebook"
                android:background="@drawable/button_background"
                android:scaleType="fitCenter"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_register_tip"/>

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_register"
                android:textColor="@color/material_blue"
                android:layout_marginStart="4dp"
                android:background="@drawable/button_background"
                android:gravity="center"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>